New features/changes: - HTTPLogger default constructor has been modyfied to have one more parameter, the dictionary that contains the configuration of the network(key=container_name:value=IP). - Interceptor.py now does a check on the containers that has obtained after the network discovery. If it doesn't finds 'benchmark' and 'interceptor' containers in the dictionary that contains that info it raises a KeyError exception to warn the user. (maybe the control on 'interceptor' makes no sense but...)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 # If having any issues with the docker network:
 # https://github.com/docker/for-win/issues/2194
 
+# how to run a container after the ones from which it depends on:
+# https://medium.com/better-programming/a-look-at-docker-composes-bootup-sequence-1f597049cc65
 services:
   interceptor:
    container_name: interceptor
