New features/changes: - docker-compose.yml builds up 'interceptor' and 'benchmark' images. The user will now just need to execute "docker-compose up" in the main folder to execute both 'interceptor' and 'benchmark' containers in the network named 'penetration_net'. - Dockerfile and 'dependencies' moved from main folder to Docker/interceptor. - Both dockerfiles of 'interceptor' and 'benchmark' have been modified to refer to the new context established in the docker compose file.

--- a/Docker/interceptor/Dockerfile
+++ b/Docker/interceptor/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.8
 WORKDIR WAPT-Dataset-Collector/code
 
 # copy the dependencies file to the wd.
-COPY dependencies .
+COPY Docker/interceptor/dependencies .
 
 # installing dependencies. (dependencies will always be contained in the same dir of Dockerfile)
 RUN pip3 install -r dependencies
