--- a/Docker/wavsep/Dockerfile
+++ b/Docker/wavsep/Dockerfile
@@ -2,7 +2,7 @@ FROM tomcat:9.0
 
 LABEL maintainer=”marcourbano”
 
-ADD wavsep.war /usr/local/tomcat/webapps/
+ADD Docker/wavsep/wavsep.war /usr/local/tomcat/webapps/
 
 EXPOSE 8080
 
