Features added: - docker-compose.yml: now it contains the lines of code to run DVWA as benchmark container. Wavsep container lines have been commented. - action_recording.js: added lines of code to obtain window.innerWidth and window.innerHeight. This information will be needed by the script that employes Selenium to reproduce the recorded session. To Do (priority queue): - add a new eventListener to listen the "beforeUnload" event. This listener will abort current session recording (if there any) to be fault tolerant in case end user browser crashes. Doing so we prevent the user from going off the rails of the protocol. - transact from localStorage to sessionStorage to better manage user experience. - implementing a simple script that uses Selenium to reproduce trivial penetration testing sessions. - update the README.MD file to new changes. - make UML diagrams for the entire project.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     dockerfile: docker/interceptor/Dockerfile
    
    image: interceptor:latest
-   entrypoint: ["python3", "Interceptor.py", "--mode", "container"]
+   # -bp must be equal to port exposed by the benchmark.
+   entrypoint: ["python3", "Interceptor.py", "--mode", "container", "-bp", "80"]
 
    volumes:
      # uncomment to enable this container to contact the host system docker engine API.
@@ -36,22 +37,35 @@ services:
     - benchmark
 
   # Benchmark
+
+  # Uncomment following lines to use Wavsep as benchmark container.
+
+  #benchmark:
+  #  container_name: benchmark
+  #  build:
+  #    context: .
+  #    dockerfile: docker/wavsep/Dockerfile
+  #
+  #  image: wavsep:latest
+  #  restart: always
+  #  ports:
+  #   - "8080:8080"
+  #  networks:
+  #   - penetration_net
+
+  # Damn Vulnerable Web Application.
   benchmark:
     container_name: benchmark
-    build: 
-      context: .
-      dockerfile: docker/wavsep/Dockerfile
-   
-    image: wavsep:latest
+    image: vulnerables/web-dvwa
     restart: always
     ports:
-     - "8080:8080"
+      - "80:80"
     networks:
-     - penetration_net
+      - penetration_net
 
-  
 networks:
   penetration_net:
     name: 'penetration_net'
     driver: bridge
+
     
